# picstream

./: .env.example  .gitignore  README.md  pyproject.toml
app/: app.py  db.py  images.py  schemas.py  users.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: CreatePost.tsx  Feed.tsx  Navbar.tsx  PostCard.tsx  TrendingCard.tsx
frontend/src/pages/: Index.tsx
screenshots/: .gitkeep
